[gd_scene load_steps=11 format=3 uid="uid://dmug1hdq3eney"]

[ext_resource type="Theme" uid="uid://bw3k707omyot" path="res://scenes/main/combat.tres" id="1_sjsul"]
[ext_resource type="Script" uid="uid://7icirmn3pf0o" path="res://scenes/main/combat.gd" id="2_d2w21"]
[ext_resource type="PackedScene" uid="uid://jg6viof7rwpu" path="res://scenes/main/bg.tscn" id="3_2s4uo"]
[ext_resource type="PackedScene" uid="uid://dkbmx1hgvvsm4" path="res://scenes/main/attack_game.tscn" id="4_1l022"]
[ext_resource type="Texture2D" uid="uid://cp7opcyvgowcp" path="res://assets/Jelly_Hoshiumi_Portrait.webp" id="5_2m6id"]
[ext_resource type="PackedScene" uid="uid://da0wvg4q66fyv" path="res://scenes/obj/world/text_ui.tscn" id="6_d2w21"]

[sub_resource type="Animation" id="Animation_yurpa"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(490, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BattleContainer:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BattleContainer:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BattleContainer:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BattleContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BattleContainer/Battle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sjsul"]
resource_name = "end_attack_game"
length = 0.7
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(900, -0.033333335, -68.333336, 0, 0, 915, -0.050000004, -42.500004, 0.03333333, 28.333332, 475, -0.008333334, -6.8333335, 0.075, 61.500004, 490, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.19999999, 0.5, 0.7)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BattleContainer:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.03333333, 0, 0, 0, 1, -0.25, 0, 0.25, 0, 1, 0, 0, 0.083333336, 0),
"times": PackedFloat32Array(0, 0.19999999, 0.7)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BattleContainer:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.03333333, 0, 0, 0, 1, -0.25, 0, 0.25, 0, 1, 0, 0, 0.083333336, 0),
"times": PackedFloat32Array(0, 0.19999999, 0.7)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BattleContainer:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.03333333, 0, 0, 0, 1, -0.25, 0, 0.25, 0, 1, 0, 0, 0.083333336, 0),
"times": PackedFloat32Array(0, 0.19999999, 0.7)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BattleContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.03333333, -0.16666667, 0, 0, 0, -0.25, 0, 0.25, 0, 0, 0, 0, 0.083333336, 0),
"times": PackedFloat32Array(0, 0.19999999, 0.7)
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BattleContainer/Battle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"width_animate_end"
}, {
"args": [false],
"method": &"toggle_attack_game"
}]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BattleContainer/Battle")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"toggle_is_game_end"
}]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"next_turn"
}]
}

[sub_resource type="Animation" id="Animation_1fo8b"]
resource_name = "boss_side"
length = 0.7
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 2, 0),
"points": PackedFloat32Array(490, -0.1, 0, 0.1, 0, 475, -0.008333334, -6.8333335, 0.075, 61.500004, 915, -0.050000004, -42.500004, 0.03333333, 28.333332, 900, -0.033333335, -68.333336, 0, 0),
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BattleContainer:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 0, 2),
"points": PackedFloat32Array(1, 0, 0, 0.083333336, 0, 1, -0.25, 0, 0.25, 0, 1, -0.03333333, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 0.7)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BattleContainer:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 0, 2),
"points": PackedFloat32Array(1, 0, 0, 0.083333336, 0, 1, -0.25, 0, 0.25, 0, 1, -0.03333333, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 0.7)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BattleContainer:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2, 0, 2),
"points": PackedFloat32Array(1, 0, 0, 0.083333336, 0, 1, -0.25, 0, 0.25, 0, 1, -0.03333333, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 0.7)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BattleContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(2, 0, 2),
"points": PackedFloat32Array(0, 0, 0, 0.083333336, 0, 0, -0.25, 0, 0.25, 0, 1, -0.03333333, -0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.5, 0.7)
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BattleContainer/Battle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"toggle_attack_game"
}, {
"args": [],
"method": &"width_animate_start"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nyhuc"]
_data = {
&"RESET": SubResource("Animation_yurpa"),
&"end_attack_game": SubResource("Animation_sjsul"),
&"start_attack_game": SubResource("Animation_1fo8b")
}

[node name="Combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sjsul")
script = ExtResource("2_d2w21")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextUI" parent="CanvasLayer" instance=ExtResource("6_d2w21")]
offset_top = -170.0
offset_bottom = -23.0

[node name="bg" parent="." instance=ExtResource("3_2s4uo")]
modulate = Color(0.73347163, 0.73347163, 0.73347163, 1)
layout_mode = 0

[node name="BattleContainer" type="BoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 500.0
grow_horizontal = 2

[node name="Battle" parent="BattleContainer" instance=ExtResource("4_1l022")]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="BossContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.00049
offset_bottom = 525.0
grow_horizontal = 2
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="BossContainer"]
custom_minimum_size = Vector2(0, 525)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="BossContainer/CenterContainer"]
clip_children = 1
clip_contents = true
layout_mode = 2
theme = ExtResource("1_sjsul")
theme_type_variation = &"ImageRect"

[node name="TextureRect" type="TextureRect" parent="BossContainer/CenterContainer/PanelContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_sjsul")
texture = ExtResource("5_2m6id")
expand_mode = 5

[node name="PlayerMenusContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(0, 195)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerMenuContainer" type="HBoxContainer" parent="PlayerMenusContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_sjsul")
theme_override_constants/separation = 75

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nyhuc")
}

[node name="StateMachine" type="Node" parent="."]

[node name="Main" type="Node" parent="StateMachine"]

[node name="AttackGame" type="Node" parent="StateMachine"]

[node name="Dialogue" type="Node" parent="StateMachine"]
